Examples: Fixed network interface MAC address parameters.

--- a/examples/ipv6/ipv6nclients/omnetpp.ini
+++ b/examples/ipv6/ipv6nclients/omnetpp.ini
@@ -93,12 +93,12 @@ tkenv-plugin-path = ../../../etc/plugins
 **.eth[*].mac.duplexMode = true
 
 # ADDED by WEI for testing purposes
-#**.cli[0].eth[0].mac.address = "0A-AA-00-00-00-01"
-#**.srv.eth[0].mac.address = "0A-AA-00-00-00-02"
-#**.r1.eth[0].mac.address = "0A-AA-00-00-00-03"
-#**.r1.eth[1].mac.address = "0A-AA-00-00-00-04"
-#**.r2.eth[0].mac.address = "0A-AA-00-00-00-04"
-#**.r2.eth[1].mac.address = "0A-AA-00-00-00-06"
-#**.r3.eth[0].mac.address = "0A-AA-00-00-00-07"
-#**.r3.eth[1].mac.address = "0A-AA-00-00-00-08"
+#**.cli[0].eth[0].address = "0A-AA-00-00-00-01"
+#**.srv.eth[0].address = "0A-AA-00-00-00-02"
+#**.r1.eth[0].address = "0A-AA-00-00-00-03"
+#**.r1.eth[1].address = "0A-AA-00-00-00-04"
+#**.r2.eth[0].address = "0A-AA-00-00-00-04"
+#**.r2.eth[1].address = "0A-AA-00-00-00-06"
+#**.r3.eth[0].address = "0A-AA-00-00-00-07"
+#**.r3.eth[1].address = "0A-AA-00-00-00-08"
 
