--- a/examples/mobileipv6/omnetpp.ini
+++ b/examples/mobileipv6/omnetpp.ini
@@ -57,14 +57,14 @@ tkenv-plugin-path = ../../etc/plugins
 
 # Access Point AP_Home ; AP_1 ; AP_2 ; AP_3 Parameters for EtherMac
 **.AP_Home.wlan*.mgmt.ssid = "HOME"
-**.AP_Home.wlan*.mac.address = "10:AA:00:00:00:01"
+**.AP_Home.wlan*.address = "10:AA:00:00:00:01"
 **.AP_Home.eth[0].address = "10:AE:00:00:00:02"
 #**.AP_Home.eth[0].txrate = 100Mbps
 **.AP_Home.eth[0].duplexMode = true
 **.AP_Home.eth[0].*.scalar-recording = false
 
 **.AP_1.wlan*.mgmt.ssid = "AP1"
-**.AP_1.wlan*.mac.address = "10:AA:00:00:A1:01" #the A1:01 specifies AP_1:interface 1
+**.AP_1.wlan*.address = "10:AA:00:00:A1:01" #the A1:01 specifies AP_1:interface 1
 **.AP_1.eth[0].address = "10:AE:00:00:A1:02" #the A1:02 specifies AP_1:interface 2
 #**.AP_1.eth[0].txrate = 100Mbps
 **.AP_1.eth[0].duplexMode = true
