--- a/examples/wireless/handover/omnetpp.ini
+++ b/examples/wireless/handover/omnetpp.ini
@@ -15,8 +15,8 @@ tkenv-plugin-path = ../../../etc/plugins
 **.mgmt.numChannels = 5
 
 # access point
-**.ap1.wlan[*].mac.address = "10:00:00:00:00:00"
-**.ap2.wlan[*].mac.address = "20:00:00:00:00:00"
+**.ap1.wlan[*].address = "10:00:00:00:00:00"
+**.ap2.wlan[*].address = "20:00:00:00:00:00"
 **.ap1.wlan[*].mgmt.ssid = "AP1"
 **.ap2.wlan[*].mgmt.ssid = "AP2"
 **.ap*.wlan[*].mgmt.beaconInterval = 100ms
