--- a/examples/wireless/hiddennode/omnetpp.ini
+++ b/examples/wireless/hiddennode/omnetpp.ini
@@ -33,7 +33,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.constraintAreaMaxZ = 0m
 
 # access point
-**.B.wlan.mac.address = "20:00:00:00:00:00"
+**.B.wlan.address = "20:00:00:00:00:00"
 **.mgmt.frameCapacity = 10
 
 # nic settings
