--- a/examples/wireless/lan80211/omnetpp-streaming.ini
+++ b/examples/wireless/lan80211/omnetpp-streaming.ini
@@ -11,7 +11,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.constraintAreaMaxZ = 0m
 
 # access point
-**.ap.wlan[*].mac.address = "10:00:00:00:00:00"
+**.ap.wlan[*].address = "10:00:00:00:00:00"
 **.host*.**.mgmt.accessPointAddress = "10:00:00:00:00:00"
 **.mgmt.frameCapacity = 100
 
