--- a/examples/wireless/mactest/omnetpp.ini
+++ b/examples/wireless/mactest/omnetpp.ini
@@ -27,7 +27,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.mtu = 10000B
 
 # access point
-**.ap.wlan[*].mac.address = "10:00:00:00:00:00"
+**.ap.wlan[*].address = "10:00:00:00:00:00"
 **.mgmt.accessPointAddress = "10:00:00:00:00:00"
 
 # radio settings
