--- a/examples/wireless/multiradio/omnetpp.ini
+++ b/examples/wireless/multiradio/omnetpp.ini
@@ -25,9 +25,9 @@ tkenv-plugin-path = ../../../etc/plugins
 *.router*.mobility.initialY = 200m
 
 # access point configuration
-*.accessPoint1.wlan[0].mac.address = "001111111111"
+*.accessPoint1.wlan[0].address = "001111111111"
 *.accessPoint1.wlan[0].radio.channelNumber = 0
-*.accessPoint2.wlan[0].mac.address = "002222222222"
+*.accessPoint2.wlan[0].address = "002222222222"
 *.accessPoint2.wlan[0].radio.channelNumber = 1
 
 # router is associated with both AP using two different radios
