--- a/examples/wireless/qos/omnetpp.ini
+++ b/examples/wireless/qos/omnetpp.ini
@@ -25,7 +25,7 @@ tkenv-plugin-path = ../../../etc/plugins
 #**.pcapRecorder[*].receivingSignalNames = "packetSentToUpper"
 **.opMode = "g(mixed)"
 # access point
-**.ap.wlan[*].mac.address = "10:00:00:00:00:00"
+**.ap.wlan[*].address = "10:00:00:00:00:00"
 #**.ap.wlan[*].mgmt.typename = "Ieee80211MgmtApSimplified"
 #**.wlan[*].mgmt.typename = "Ieee80211MgmtStaSimplified"
 **.mgmt.accessPointAddress = "10:00:00:00:00:00"
