--- a/examples/wireless/ratecontrol/omnetpp.ini
+++ b/examples/wireless/ratecontrol/omnetpp.ini
@@ -28,7 +28,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.displayIntersections = true
 
 # access point
-**.sinkClient.wlan.mac.address = "20:00:00:00:00:00"
+**.sinkClient.wlan.address = "20:00:00:00:00:00"
 
 # nic settings
 **.wlan*.bitrate = 1Mbps
