--- a/examples/wireless/testnewmac/omnetpp.ini
+++ b/examples/wireless/testnewmac/omnetpp.ini
@@ -27,7 +27,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.cliHost[5].mobility.startAngle = 300deg
 
 # access point
-**.srvHost.wlan.mac.address = "20:00:00:00:00:00"
+**.srvHost.wlan.address = "20:00:00:00:00:00"
 **.mgmt.frameCapacity = 10
 
 # nic settings
