--- a/examples/wireless/hosttohost/omnetpp.ini
+++ b/examples/wireless/hosttohost/omnetpp.ini
@@ -26,8 +26,8 @@ tkenv-plugin-path = ../../../etc/plugins
 **.cliHost[5].mobility.startAngle = 300deg
 
 # access point
-**.ap.wlan[*].mac.address = "10:00:00:00:00:00"
-**.srvHost.wlan[*].mac.address = "20:00:00:00:00:00"
+**.ap.wlan[*].address = "10:00:00:00:00:00"
+**.srvHost.wlan[*].address = "20:00:00:00:00:00"
 **.mgmt.accessPointAddress = "10:00:00:00:00:00"
 **.mgmt.frameCapacity = 10
 
