--- a/examples/wireless/throughput/omnetpp.ini
+++ b/examples/wireless/throughput/omnetpp.ini
@@ -14,7 +14,7 @@ tkenv-plugin-path = ../../../etc/plugins
 **.constraintAreaMaxZ = 0m
 
 # access point
-**.ap.wlan.mac.address = "10:00:00:00:00:00"
+**.ap.wlan.address = "10:00:00:00:00:00"
 **.mgmt.accessPointAddress = "10:00:00:00:00:00"
 **.mgmt.frameCapacity = 10
 
