updating broadcast example after recent changes

--- a/examples/inet/broadcast/omnetpp.ini
+++ b/examples/inet/broadcast/omnetpp.ini
@@ -17,3 +17,5 @@ network = inet.examples.inet.broadcast.UDPBroadcastNetwork
 **.nonTarget.numApps = 1
 **.nonTarget.app[0].typename = "UdpSink"
 **.nonTarget.app[0].localPort = 1000
+
+*.R2.ipv4.ip.directBroadcast = "eth0"
