Ipv4: Renamed direct broadcast related parameters to better express the purpose.

--- a/examples/inet/broadcast/omnetpp.ini
+++ b/examples/inet/broadcast/omnetpp.ini
@@ -18,4 +18,4 @@ network = inet.examples.inet.broadcast.UDPBroadcastNetwork
 **.nonTarget.app[0].typename = "UdpSink"
 **.nonTarget.app[0].localPort = 1000
 
-*.R2.ipv4.ip.directBroadcast = "eth0"
+*.R2.ipv4.ip.directBroadcastInterfaces = "eth0"
