Examples: Set open/send parameters to 0 in VLAN examples.

--- a/examples/ethernet/vlan/omnetpp.ini
+++ b/examples/ethernet/vlan/omnetpp.ini
@@ -12,6 +12,8 @@ tkenv-plugin-path = ../../../etc/plugins
 *.host1.app[*].connectAddress = "host2"
 *.host1.app[*].connectPort = 1000
 *.host1.app[*].sendBytes = 1MiB
+*.host1.app[*].tOpen = 0s
+*.host1.app[*].tSend = 0s
 
 *.host2.numApps = 1
 *.host2.app[*].typename = "TcpEchoApp"
