Examples: Added ignorePartialInterference = true where appropriate.
In most examples, crosstalk between adjacent channels is not important,
so it can be safely ignored.

--- a/examples/dhcp/omnetpp.ini
+++ b/examples/dhcp/omnetpp.ini
@@ -37,6 +37,9 @@ network = WirelessNetWithDHCP
 **.configurator.config = xml("<config><interface hosts='gateway' names='eth0' address='192.168.0.1' netmask='255.255.255.0'/><interface names='eth*' address='192.168.x.x' netmask='255.255.255.0'/></config>")
 **.numHosts = 1
 
+# analog model
+**.analogModel.ignorePartialInterference = true
+
 # DHCP client in the wireless hosts
 **.client[*].numApps = 2
 **.client[*].app[0].typename = "DhcpClient"
