--- a/examples/manetrouting/multiradio/omnetpp.ini
+++ b/examples/manetrouting/multiradio/omnetpp.ini
@@ -50,6 +50,9 @@ description = Use dual-radio hosts on multiple channels (3)
 # number of channels used
 **.mgmt.numChannels = 3
 
+# analog model
+**.analogModel.ignorePartialInterference = true
+
 # wlan interface - radio channel assignemnt
 **.mobileHost[0].wlan[0].radio.channelNumber = 0
 **.mobileHost[0].wlan[1].radio.channelNumber = 1
