--- a/examples/mobileipv6/omnetpp.ini
+++ b/examples/mobileipv6/omnetpp.ini
@@ -170,6 +170,9 @@ cmdenv-express-mode = true
 **.ap.*.scalar-recording = false
 **.hub.*.scalar-recording = false
 
+# analog model
+**.analogModel.ignorePartialInterference = true
+
 # wireless channels
 **.AP_Home.wlan*.radio.channelNumber = 1
 **.AP_1.wlan*.radio.channelNumber = 2
