--- a/examples/wireless/handover/omnetpp.ini
+++ b/examples/wireless/handover/omnetpp.ini
@@ -30,6 +30,9 @@ network = HandoverNetwork
 **.host*.mobility.initialMovementHeading = 0deg
 **.host*.mobility.updateInterval = 100ms
 
+# analog model
+**.analogModel.ignorePartialInterference = true
+
 # wireless channels
 **.ap1.wlan[*].radio.channelNumber = 2
 **.ap2.wlan[*].radio.channelNumber = 3
