--- a/examples/wireless/multiradio/omnetpp.ini
+++ b/examples/wireless/multiradio/omnetpp.ini
@@ -23,6 +23,9 @@ network = MultiRadio
 *.router*.mobility.initialX = 250m
 *.router*.mobility.initialY = 200m
 
+# analog model
+**.analogModel.ignorePartialInterference = true
+
 # access point configuration
 *.accessPoint1.wlan[0].address = "001111111111"
 *.accessPoint1.wlan[0].radio.channelNumber = 0
