updating examples after recent changes

--- a/examples/httptools/socket/simpleddos/omnetpp.ini
+++ b/examples/httptools/socket/simpleddos/omnetpp.ini
@@ -97,4 +97,4 @@ network = HttpNnodes
 **.tcp.recordStats = true
 
 # Arp configuration
-**.ipv4.arp.proxyARP = true  # Host's is hardwired "false"
+**.ipv4.arp.proxyArpInterfaces = "*"  # Host's is hardwired "false"
