--- a/tests/misc/dlltest/omnetpp.ini
+++ b/tests/misc/dlltest/omnetpp.ini
@@ -42,7 +42,7 @@ cmdenv-express-mode = false
 **.srv*.forwarding = false
 
 # ARP configuration
-**.ipv4.arp.proxyARP = true  # Host's is hardwired "false"
+**.ipv4.arp.proxyArpInterfaces = "*"  # Host's is hardwired "false"
 
 # NIC configuration
 **.ppp[*].queue.typename = "DropTailQueue" # in routers
