--- a/examples/inet/shutdownrestart/omnetpp.ini
+++ b/examples/inet/shutdownrestart/omnetpp.ini
@@ -9,7 +9,7 @@ sim-time-limit = 100s
 
 **.hasStatus = true
 
-*.scenarioManager.script = xmldoc(${scenario = "scenario_node.xml", "scenario_app.xml"})
+*.scenarioManager.script = xmldoc(${scenario = "scenario_node.xml", "scenario_app.xml", "scenario_iface.xml"})
 
 [Config Ping]
 # clients ping te host
