Disabling travis notification

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ sudo: required
 
 language: generic
 
-notifications:
-  email:
-    recipients:
-      - inet@omnetpp.org
+#notifications:
+#  email:
+#    recipients:
+#      - inet@omnetpp.org
 
 services:
   - docker
