examples: parameter type fixup

--- a/examples/ethernet/lans/defaults.ini
+++ b/examples/ethernet/lans/defaults.ini
@@ -15,6 +15,6 @@
 **.relayUnit.processingTime = 2us
 
 **.cli.reqLength = intuniform(50,1400)*1B
-**.cli.respLength = truncnormal(3000B,3000B)
+**.cli.respLength = int(truncnormal(3000B,3000B))
 
 
