--- a/examples/inet/nclients/nclients2.ini
+++ b/examples/inet/nclients/nclients2.ini
@@ -25,8 +25,8 @@ tkenv-plugin-path = ../../../etc/plugins
 
 **.cli*[*].tcpApp[0].startTime = exponential(5s)
 **.cli*[*].tcpApp[0].numRequestsPerSession = 1
-**.cli*[*].tcpApp[0].requestLength = truncnormal(350B,20B)
-**.cli*[*].tcpApp[0].replyLength = exponential(2000B)
+**.cli*[*].tcpApp[0].requestLength = int(truncnormal(350B,20B))
+**.cli*[*].tcpApp[0].replyLength = int(exponential(2000B))
 **.cli*[*].tcpApp[0].thinkTime = truncnormal(2s,3s)
 **.cli*[*].tcpApp[0].idleInterval = truncnormal(1s,3s)
 **.cli*[*].tcpApp[0].reconnectInterval = 30s
