--- a/examples/ipv6/demonetworketh/omnetpp.ini
+++ b/examples/ipv6/demonetworketh/omnetpp.ini
@@ -28,10 +28,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.cli[*].tcpApp[0].connectPort = 1000
 
 **.cli[*].tcpApp[0].startTime = uniform(10s,15s)
-**.cli[*].tcpApp[0].numCommands = exponential(10)
-**.cli[*].tcpApp[0].commandLength = exponential(10B)
+**.cli[*].tcpApp[0].numCommands = int(exponential(10))
+**.cli[*].tcpApp[0].commandLength = int(exponential(10B))
 **.cli[*].tcpApp[0].keyPressDelay = exponential(0.1s)
-**.cli[*].tcpApp[0].commandOutputLength = exponential(40B)
+**.cli[*].tcpApp[0].commandOutputLength = int(exponential(40B))
 **.cli[*].tcpApp[0].thinkTime = truncnormal(2s,3s)
 **.cli[*].tcpApp[0].idleInterval = truncnormal(3600s,1200s)
 **.cli[*].tcpApp[0].reconnectInterval = 30s
@@ -64,7 +64,4 @@ tkenv-plugin-path = ../../../etc/plugins
 #**.r2.eth[1].mac.address = "0A-AA-00-00-00-06"
 #**.r3.eth[0].mac.address = "0A-AA-00-00-00-07"
 #**.r3.eth[1].mac.address = "0A-AA-00-00-00-08"
-
-
-
 
