--- a/examples/rtp/multicast1/omnetpp.ini
+++ b/examples/rtp/multicast1/omnetpp.ini
@@ -1,5 +1,5 @@
 [General]
-network = RTPNetwork
+network = RTPMulticast1
 total-stack = 28MiB
 tkenv-plugin-path = ../../../etc/plugins
 
@@ -13,3 +13,4 @@ tkenv-plugin-path = ../../../etc/plugins
 **.transmissionStartDelay = 20s
 **.transmissionStopDelay = 5s
 **.sessionLeaveDelay = 60s
+**.host*.IPForward = false
