--- a/examples/mobileipv6/omnetpp.ini
+++ b/examples/mobileipv6/omnetpp.ini
@@ -115,13 +115,13 @@ tkenv-plugin-path = ../../etc/plugins
 **.MN[0].tcpApp[0].connectPort = 1000 #same destination port numbers
 **.MN[1].tcpApp[0].connectPort = 1000 #same destination port numbers
 
-**.MN[*].tcpApp[0].startTime = uniform(10,15)
-**.MN[*].tcpApp[0].numCommands = exponential(1)
-**.MN[*].tcpApp[0].commandLength = exponential(1)
-**.MN[*].tcpApp[0].keyPressDelay = exponential(0.1)
-**.MN[*].tcpApp[0].commandOutputLength = exponential(40)
-**.MN[*].tcpApp[0].thinkTime = truncnormal(2,3)
-**.MN[*].tcpApp[0].idleInterval = truncnormal(3600,1200)
+**.MN[*].tcpApp[0].startTime = uniform(10s,15s)
+**.MN[*].tcpApp[0].numCommands = int(exponential(1))
+**.MN[*].tcpApp[0].commandLength = int(exponential(1B))
+**.MN[*].tcpApp[0].keyPressDelay = exponential(0.1s)
+**.MN[*].tcpApp[0].commandOutputLength = int(exponential(40B))
+**.MN[*].tcpApp[0].thinkTime = truncnormal(2s,3s)
+**.MN[*].tcpApp[0].idleInterval = truncnormal(3600s,1200s)
 **.MN[*].tcpApp[0].reconnectInterval = 30s
 
 **.CN*.numTcpApps = 0                       #changed from 1 to 0
