--- a/tests/fingerprint/ethernet-hub.ini
+++ b/tests/fingerprint/ethernet-hub.ini
@@ -21,6 +21,6 @@ network = inet.tests.ethernet.HostsWithHub
 **.hostA.app.destAddress = "hostB"
 **.hostB.app.destAddress = "hostC"
 **.hostC.app.destAddress = "hostA"
-**.app.packetLength = select(intuniform(0,2), uniform(20B,70B), uniform(474B,514B), uniform(1200B,1500B))    # 10,000 bits TODO revise
-**.app.numPacketsPerBurst = geometric(1/5)  # mean 5 packets per burst
+**.app.packetLength = select(intuniform(0,2), int(uniform(20B,70B)), int(uniform(474B,514B)), int(uniform(1200B,1500B)))    # 10,000 bits TODO revise
+**.app.numPacketsPerBurst = int(geometric(1/5))  # mean 5 packets per burst
 **.app.sendInterval = 1s
