--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,53 @@
-# ignore generated files
+# local and generated files not to be committed
+src/Makefile
+src/Makefile.vc
 *_m.h
 *_m.cc
-src/Makefile
+*_sm.h
+*_sm.cc
+.oppfeaturestate
+.nedexclusions
+src/inet/features.h
+src/inet/opp_defines.h
+precompiled_*.h.*
+/3rdparty
+**/MoBAN_Pattern*.txt
+
+# output and result files
+.settings/
 /doc/doxy/
 /doc/neddoc/
+/doc/src/manual/figures/*.pdf
+/doc/src/manual/inet-manual.pdf
+/doc/inet-manual-draft.pdf
+/examples/*/results/
+/examples/*/*/results/
+/examples/*/*/*/results/
+/examples/*/cache/
+/examples/*/*/cache/
+/tutorials/*/cache/
+/tutorials/*/data/
+/tutorials/wireless/html/
+/tests/*/work/
+/tests/*/*/work/
+/tests/*/results*/
+*.log
+*.sim
+*.pyc
+*.pcap
+*.sca
+*.vec
+*.vci
+*.aux
+*.bbl
+*.blg
+*.idx
+*.toc
+*.pdf
+*.ilg
+*.ind
+*.synctex.gz
+.buildlog*
 
 # ignore binary files
 out/
@@ -18,12 +62,20 @@ out/
 *.pdb
 *.idb
 *.manifest
+.qtenv.ini
+.qtenvrc
 .tkenvrc
+.tkenvlog
+.cmdenv-log
+netanim-trace.txt
+*.out
 
 # ignore backup and temp files
+*.UPDATED
+*.FAILED
+*.ERROR
 *.bak
 backups
 *~
 xxx
-/3rdparty
 /tmp/
