Examples: Fixed fingerprints after recent 802.11 changes in Edcaf and Hcf.

--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -59,7 +59,7 @@ sim-time-limit = 5s
 [Config MacQos]
 extends = MacNonQos
 **.wlan[*].classifier.typename = "ExampleQosClassifier"
-**.mac.hcf.maxQueueSize = -1
+**.mac.hcf.edca.edcaf[*].maxQueueSize = -1
 **.mac.qosStation = true
 
 [Config Fragmentation]
