--- a/examples/wireless/qos/omnetpp.ini
+++ b/examples/wireless/qos/omnetpp.ini
@@ -68,7 +68,7 @@ network = QosThroughput
 [Config MacQos]
 extends = MacNonQos
 **.wlan[*].classifier.typename = "ExampleQosClassifier"
-**.mac.hcf.maxQueueSize = -1
+**.mac.hcf.edca.edcaf[*].maxQueueSize = -1
 **.mac.qosStation = true
 **.mac.hcf.originatorMacDataService.msduAggregationPolicy.typename = "BasicMsduAggregationPolicy"
 
