Examples: Followed recent PendingQueue changes.

--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -53,13 +53,13 @@ sim-time-limit = 5s
 
 [Config MacNonQos]
 **.wlan[*].mac.typename = "Ieee80211Mac"
-**.mac.dcf.maxQueueSize = -1
+**.mac.dcf.pendingQueue.maxQueueSize = -1
 **.mac.ctrl.typename = ${"OptimizedCollisionController","CollisionController"}
 
 [Config MacQos]
 extends = MacNonQos
 **.wlan[*].classifier.typename = "ExampleQosClassifier"
-**.mac.hcf.edca.edcaf[*].maxQueueSize = -1
+**.mac.hcf.edca.edcaf[*].pendingQueue.maxQueueSize = -1
 **.mac.qosStation = true
 
 [Config Fragmentation]
