--- a/examples/wireless/qos/omnetpp.ini
+++ b/examples/wireless/qos/omnetpp.ini
@@ -63,12 +63,12 @@ network = QosThroughput
 
 [Config MacNonQos]
 **.wlan[*].mac.typename = "Ieee80211Mac"
-**.mac.dcf.maxQueueSize = -1
+**.mac.dcf.pendingQueue.maxQueueSize = -1
 
 [Config MacQos]
 extends = MacNonQos
 **.wlan[*].classifier.typename = "ExampleQosClassifier"
-**.mac.hcf.edca.edcaf[*].maxQueueSize = -1
+**.mac.hcf.edca.edcaf[*].pendingQueue.maxQueueSize = -1
 **.mac.qosStation = true
 **.mac.hcf.originatorMacDataService.msduAggregationPolicy.typename = "BasicMsduAggregationPolicy"
 
