Examples: Followed recent 802.11 changes in INI files to fix fingerprints.

--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -53,7 +53,7 @@ sim-time-limit = 5s
 
 [Config MacNonQos]
 **.wlan[*].mac.typename = "Ieee80211Mac"
-**.mac.dcf.pendingQueue.maxQueueSize = -1
+**.mac.dcf.channelAccess.pendingQueue.maxQueueSize = -1
 **.mac.ctrl.typename = ${"OptimizedCollisionController","CollisionController"}
 
 [Config MacQos]
