--- a/examples/wireless/qos/omnetpp.ini
+++ b/examples/wireless/qos/omnetpp.ini
@@ -63,7 +63,7 @@ network = QosThroughput
 
 [Config MacNonQos]
 **.wlan[*].mac.typename = "Ieee80211Mac"
-**.mac.dcf.pendingQueue.maxQueueSize = -1
+**.mac.dcf.channelAccess.pendingQueue.maxQueueSize = -1
 
 [Config MacQos]
 extends = MacNonQos
