--- a/examples/wireless/testnewmac/omnetpp.ini
+++ b/examples/wireless/testnewmac/omnetpp.ini
@@ -31,7 +31,7 @@ network = Throughput
 
 # nic settings
 **.wlan*.bitrate = 11Mbps
-**.cliHost[*].wlan*.mac.*.maxQueueSize = 14
+**.cliHost[*].wlan*.mac.dcf.channelAccess.pendingQueue.maxQueueSize = 14
 **.cliHost[*].wlan*.mac.dcf.rtsPolicy.rtsThreshold = 1200B
 **.wlan*.mac.retryLimit = 7
 
