--- a/examples/manetrouting/dymo/omnetpp.ini
+++ b/examples/manetrouting/dymo/omnetpp.ini
@@ -30,7 +30,7 @@ num-rngs = 3
 **.wlan[*].bitrate = 2Mbps
 
 **.wlan[*].mgmt.frameCapacity = 10
-**.wlan[*].mac.*.maxQueueSize = 14
+**.wlan[*].mac.dcf.channelAccess.pendingQueue.maxQueueSize = 14
 **.wlan[*].mac.retryLimit = 7
 **.wlan[*].mac.dcf.channelAccess.cwMin = 7
 **.wlan[*].mac.cwMinMulticast = 31
