--- a/examples/manetrouting/multiradio/omnetpp.ini
+++ b/examples/manetrouting/multiradio/omnetpp.ini
@@ -18,7 +18,7 @@ network = MultiRadio
 **.wlan*.bitrate = 54Mbps
 
 #MAC
-**.mac.*.maxQueueSize = 15
+**.mac.dcf.channelAccess.pendingQueue.maxQueueSize = 15
 
 #RADIO
 #**.radio.sensitivity = -85dBm
