--- a/examples/wireless/lan80211/omnetpp-streaming.ini
+++ b/examples/wireless/lan80211/omnetpp-streaming.ini
@@ -39,7 +39,7 @@ network = Lan80211
 
 # nic settings
 **.wlan*.bitrate = 2Mbps
-**.wlan[*].mac.*.maxQueueSize = 14
+**.wlan[*].mac.dcf.channelAccess.pendingQueue.maxQueueSize = 14
 
 **.wlan[*].mac.retryLimit = 7
 **.wlan[*].mac.dcf.channelAccess.cwMin = 7
