Include an example with DymoFau

--- a/examples/manetrouting/inetmanet/omnetpp.ini
+++ b/examples/manetrouting/inetmanet/omnetpp.ini
@@ -56,4 +56,7 @@ tkenv-plugin-path = ../../../etc/plugins
 *.host[*].app[0].typename = "AodvUU"
 *.host[*].app[*].typename = "PingApp"
 
-
+[Config DymoFau]
+*.host[*].app[0].UdpPort = 555
+*.host[*].app[0].typename = "DymoFau"
+*.host[*].app[*].typename = "PingApp"
