examples: temporary disabled serialization for ipv6 simulations

--- a/examples/inet/udpclientserver/omnetpp.ini
+++ b/examples/inet/udpclientserver/omnetpp.ini
@@ -4,7 +4,7 @@ total-stack = 7MiB
 #debug-on-errors = true
 #record-eventlog = true
 
-**.crcMode = "computed"
+#**.crcMode = "computed"
 
 #**.server.numPcapRecorders = 1
 #**.server.pcapRecorder[0].pcapFile = "results/server.pcap"
