--- a/examples/ipv6/nclients/omnetpp.ini
+++ b/examples/ipv6/nclients/omnetpp.ini
@@ -62,9 +62,9 @@ description = SCTP apps via IPv6
 **.cli[*].app[0].thinkTime = exponential(1s)
 **.cli[*].app[0].queueSize = 0
 
-**.pcapRecorder[0].moduleNamePatterns="ppp[*]"
-**.cli[0].numPcapRecorders=1
-**.cli[0].pcapRecorder[0].pcapFile="results/client.pcap"
+#**.pcapRecorder[0].moduleNamePatterns="ppp[*]"
+#**.cli[0].numPcapRecorders=1
+#**.cli[0].pcapRecorder[0].pcapFile="results/client.pcap"
 
 **.srv.numApps = 1
 **.srv.app[*].typename = "SctpServer"
@@ -72,9 +72,9 @@ description = SCTP apps via IPv6
 **.srv.app[0].localPort = 1000
 **.srv.app[0].numPacketsToReceivePerClient = 2
 
-**.crcMode = "computed"
-**.srv.numPcapRecorders=1
-**.srv.pcapRecorder[0].pcapFile="results/srv.pcap"
+#**.crcMode = "computed"
+#**.srv.numPcapRecorders=1
+#**.srv.pcapRecorder[0].pcapFile="results/srv.pcap"
 
 [Config PPP]
 description = "PPP network"
