examples: remove unnecessary settings: cmdenv-express-mode, etc.
cmdenv-express-mode
debug-on-errors
cmdenv-event-banners
debug-statistics-recording

other commented out settings

--- a/examples/bgpv4/Bgp3Routers/omnetpp.ini
+++ b/examples/bgpv4/Bgp3Routers/omnetpp.ini
@@ -1,14 +1,9 @@
 [General]
-description = "Multi OPSF + BGP"
+description = "Multi OSPF + BGP"
 network = BgpNetwork
 sim-time-limit = 100s
-#debug-on-errors = true
 output-scalar-file = results.sca
 output-scalar-precision = 3
-
-cmdenv-express-mode = true
-cmdenv-event-banners = false
-
 
 **.app[0].**.scalar-recording = true
 **.scalar-recording = false
@@ -25,8 +20,6 @@ cmdenv-event-banners = false
 #tcp settings
 **.tcp.mss = 1024
 **.tcp.advertisedWindow = 14336
-#**.tcp.sendQueueClass = "TCPMsgBasedSendQueue"
-#**.tcp.receiveQueueClass = "TCPMsgBasedRcvQueue"
 **.tcp.tcpAlgorithmClass = "TcpReno"
 **.tcp.recordStats = false
 
@@ -71,3 +64,4 @@ cmdenv-event-banners = false
 **.HB22.app[*].typename = "UdpSink"
 **.HC12.app[*].typename = "UdpSink"
 **.HC22.app[*].typename = "UdpSink"
+
