--- a/examples/bgpv4/BgpAndOspf/omnetpp.ini
+++ b/examples/bgpv4/BgpAndOspf/omnetpp.ini
@@ -1,15 +1,9 @@
 [General]
-description = "Multi OPSF + BGP"
+description = "Multi OSPF + BGP"
 network = BgpNetwork
 sim-time-limit = 60s
-#debug-on-errors = true
 output-scalar-file = results.sca
 output-scalar-precision = 5
-#snapshot-file = omnetpp.sna
-
-cmdenv-express-mode = true
-cmdenv-event-banners = false
-
 
 **.app[0].**.scalar-recording = true
 **.scalar-recording = false
@@ -26,8 +20,6 @@ cmdenv-event-banners = false
 #tcp settings
 **.tcp.mss = 1024
 **.tcp.advertisedWindow = 14336
-#**.tcp.sendQueueClass = "TCPMsgBasedSendQueue"
-#**.tcp.receiveQueueClass = "TCPMsgBasedRcvQueue"
 **.tcp.tcpAlgorithmClass = "TcpReno"
 **.tcp.recordStats = false
 
