a ManhattanGrid mobility pattern implementation

--- a/examples/mobility/omnetpp.ini
+++ b/examples/mobility/omnetpp.ini
@@ -168,6 +168,15 @@ description = "nonzero waitTime"
 extends = RandomWaypointMobility1
 **.host*.mobility.waitTime = uniform(3s,8s)
 
+[Config ManhattanGrid]
+network = MobileNetwork
+*.numHosts = 5
+**.host*.mobility.typename = "ManhattanGrid"
+**.host*.mobility.initFromDisplayString = false
+**.host*.mobility.speed = uniform(20mps,50mps)
+**.host*.mobility.NumXstreets = 3
+**.host*.mobility.NumYstreets = 3
+
 [Config RectangleMobility]
 network = MobileNetwork
 **.host*.mobility.typename = "RectangleMobility"
