Examples: Removed obsolete internal queue examples.

--- a/examples/inet/tcp_eth_reconnect/omnetpp.ini
+++ b/examples/inet/tcp_eth_reconnect/omnetpp.ini
@@ -1,36 +1,21 @@
-[Config with_EtherMACFullDuplex_externalQueue]
+[Config with_EtherMACFullDuplex]
 description = ""
 **.eth[*].mac.queue.typename = "EtherQosQueue"
 **.eth[*].mac.queue.dataQueue.typename = "DropTailQueue"
 
-[Config with_EtherMACFullDuplex_internalQueue]
-description = ""
-**.eth[*].mac.queue.typename = ""
-
-[Config with_EtherMAC_externalQueue_fullduplex]
+[Config with_EtherMAC_fullduplex]
 description = ""
 **.eth[*].mac.typename = "EtherMac"
 **.eth[*].mac.queue.typename = "EtherQosQueue"
 **.eth[*].mac.queue.dataQueue.typename = "DropTailQueue"
 
 
-[Config with_EtherMAC_internalQueue_fullduplex]
-description = ""
-**.eth[*].mac.typename = "EtherMac"
-**.eth[*].mac.queue.typename = ""
-
-[Config with_EtherMAC_externalQueue_halfduplex]
+[Config with_EtherMAC_halfduplex]
 description = ""
 **.eth[*].mac.typename = "EtherMac"
 **.eth[*].mac.duplexMode = false
 **.eth[*].mac.queue.typename = "EtherQosQueue"
 **.eth[*].mac.queue.dataQueue.typename = "DropTailQueue"
-
-[Config with_EtherMAC_internalQueue_halfduplex]
-description = ""
-**.eth[*].mac.typename = "EtherMac"
-**.eth[*].mac.duplexMode = false
-**.eth[*].mac.queue.typename = ""
 
 ###################################################################
 
