Include initial model, it is necessary to fix it

--- a/examples/mobility/omnetpp.ini
+++ b/examples/mobility/omnetpp.ini
@@ -177,6 +177,23 @@ network = MobileNetwork
 **.host*.mobility.NumXstreets = 3
 **.host*.mobility.NumYstreets = 3
 
+[Config Paparazzi]
+network = MobileNetwork
+*.numHosts = 1
+
+**.host*.mobility.typename = "PaparazziMobility"
+**.host*.mobility.initFromDisplayString = false
+#**.host*.mobility.sequence = "waypoint stayat eigth oval scan"
+**.host*.mobility.sequence = "eigth"
+
+**.host*.mobility.speed = uniform(5mps,10mps)
+**.host*.mobility.r = 10m
+**.host*.mobility.linearDist = 50m 
+**.host*.mobility.ScanLines = 5
+**.host*.mobility.borderX = 10m
+**.host*.mobility.borderY = 10m
+**.host*.mobility.borderZ = 10m
+
 [Config RectangleMobility]
 network = MobileNetwork
 **.host*.mobility.typename = "RectangleMobility"
