--- a/examples/mobility/omnetpp.ini
+++ b/examples/mobility/omnetpp.ini
@@ -184,11 +184,15 @@ network = MobileNetwork
 **.host*.mobility.typename = "PaparazziMobility"
 **.host*.mobility.initFromDisplayString = false
 #**.host*.mobility.sequence = "waypoint stayat eigth oval scan"
-**.host*.mobility.sequence = "eigth"
+#**.host*.mobility.sequence = "stayat"
+
+#**.host[0].mobility.initialX = 50m
+#**.host[0].mobility.initialY = 50m
+
 
 **.host*.mobility.speed = uniform(5mps,10mps)
-**.host*.mobility.r = 10m
-**.host*.mobility.linearDist = 50m 
+**.host*.mobility.r = 20m
+**.host*.mobility.linearDist = 100m 
 **.host*.mobility.ScanLines = 5
 **.host*.mobility.borderX = 10m
 **.host*.mobility.borderY = 10m
