NetPerfMeter: sending data in TCP/UDP mode, too; added TCP/UDP examples, fingerprints

--- a/examples/inet/netperfmeter/omnetpp.ini
+++ b/examples/inet/netperfmeter/omnetpp.ini
@@ -124,8 +124,6 @@ testNetwork.clientMain[*].netPerfMeterApp[*].remotePort    = 8000+${alphaMainCli
 testNetwork.clientMain[*].netPerfMeterApp[*].remoteAddress = "testNetwork.serverMain[" + string(${alphaMainClientID=ancestorIndex(1)}) + "]%ppp0"
 testNetwork.clientMain[*].netPerfMeterApp[*].primaryPath   = "testNetwork.serverMain[" + string(${alphaMainClientID}) + "]%ppp0"
 testNetwork.serverMain[*].netPerfMeterApp[*].localPort     = 8000+${alphaMainServerNetPerfMeterID=ancestorIndex(0)}
-testNetwork.clientMain[*].netPerfMeterApp[*].protocol      = "SCTP"
-testNetwork.serverMain[*].netPerfMeterApp[*].protocol      = "SCTP"
 
 # ===== SCTP Parameters ==================================
 testNetwork.*.sctp.arwnd                 = 5000000
@@ -148,15 +146,27 @@ testNetwork.*.routing.procDelay    = 0.2us
 testNetwork.*.inputQueue.procDelay = 0.1us
 
 
-[Config TraceFile]
+[Config TraceFile-Udp]
 testNetwork.systems = 1
 testNetwork.client*[*].netPerfMeterApp[*].traceFile = "trace111.trace"
 testNetwork.*[*].netPerfMeterApp[*].stopTime        = 600s
+testNetwork.*[*].netPerfMeterApp[*].protocol        = "UDP"
+
+[Config TraceFile-Tcp]
+testNetwork.systems = 1
+testNetwork.client*[*].netPerfMeterApp[*].traceFile = "trace111.trace"
+testNetwork.*[*].netPerfMeterApp[*].stopTime        = 600s
+testNetwork.*[*].netPerfMeterApp[*].protocol        = "TCP"
+
+[Config TraceFile-Sctp]
+testNetwork.systems = 1
+testNetwork.client*[*].netPerfMeterApp[*].traceFile = "trace111.trace"
+testNetwork.*[*].netPerfMeterApp[*].stopTime        = 600s
+testNetwork.*[*].netPerfMeterApp[*].protocol        = "SCTP"
 
 [Config SCTP-with-OLIA]
 testNetwork.systems = 1
 testNetwork.*[*].netPerfMeterApp[*].protocol = "SCTP"
-testNetwork.netPerfMeterApp[*].protocol = "SCTP"
 testNetwork.*.sctp.arwnd                       = 500000
 testNetwork.*.sctp.cmtSendAllVariant           = "smallestLastTransmission"
 testNetwork.*.sctp.cmtRetransmissionVariant    = "normal"
