--- a/examples/inet/netperfmeter/omnetpp.ini
+++ b/examples/inet/netperfmeter/omnetpp.ini
@@ -78,52 +78,55 @@ testNetwork.**.crcMode = "computed"
 
 # ===== Application Parameters ===========================
 # ----- NetPerfMeter Active Node--------------------------
-testNetwork.client*[*].netPerfMeterApp[*].activeMode      = true
-testNetwork.client*[*].netPerfMeterApp[*].connectTime     = 0.001 s
-testNetwork.client*[*].netPerfMeterApp[*].startTime       = uniform(0.9s,1.1s)
-testNetwork.client*[*].netPerfMeterApp[*].resetTime       = 19 s
-testNetwork.client*[*].netPerfMeterApp[*].stopTime        = 60 s
-testNetwork.client*[*].netPerfMeterApp[*].queueSize       = 5000000 B
-testNetwork.client*[*].netPerfMeterApp[*].unordered       = 1
-testNetwork.client*[*].netPerfMeterApp[*].unreliable      = 0
-testNetwork.client*[*].netPerfMeterApp[*].outboundStreams = 1
-testNetwork.client*[*].netPerfMeterApp[*].maxMsgSize      = 1452 B
-testNetwork.client*[*].netPerfMeterApp[*].frameRate       = 0 Hz
-testNetwork.client*[*].netPerfMeterApp[*].frameSize       = 1452 B
-testNetwork.client*[*].netPerfMeterApp[*].frameRateString = ""
-testNetwork.client*[*].netPerfMeterApp[*].frameSizeString = ""
-testNetwork.client*[*].netPerfMeterApp[*].onTime          = -1s
-testNetwork.client*[*].netPerfMeterApp[*].offTime         = -1s
-testNetwork.client*[*].netPerfMeterApp[*].maxReconnects   = 0
+testNetwork.client*[*].app[*].activeMode      = true
+testNetwork.client*[*].app[*].connectTime     = 0.001 s
+testNetwork.client*[*].app[*].startTime       = uniform(0.9s,1.1s)
+testNetwork.client*[*].app[*].resetTime       = 19 s
+testNetwork.client*[*].app[*].stopTime        = 60 s
+testNetwork.client*[*].app[*].queueSize       = 5000000 B
+testNetwork.client*[*].app[*].unordered       = 1
+testNetwork.client*[*].app[*].unreliable      = 0
+testNetwork.client*[*].app[*].outboundStreams = 1
+testNetwork.client*[*].app[*].maxMsgSize      = 1452 B
+testNetwork.client*[*].app[*].frameRate       = 0 Hz
+testNetwork.client*[*].app[*].frameSize       = 1452 B
+testNetwork.client*[*].app[*].frameRateString = ""
+testNetwork.client*[*].app[*].frameSizeString = ""
+testNetwork.client*[*].app[*].onTime          = -1s
+testNetwork.client*[*].app[*].offTime         = -1s
+testNetwork.client*[*].app[*].maxReconnects   = 0
 testNetwork.client*[*].numPcapRecorders                   = 1   # *** Enable pcap dump here! ***
 testNetwork.client*[*].pcapRecorder[0].pcapFile           = ${N1=fullPath()}+".pcap"
 
 # ----- NetPerfMeter Passive Node ------------------------
-testNetwork.server*[*].netPerfMeterApp[*].activeMode        = false
-testNetwork.server*[*].netPerfMeterApp[*].connectTime       = 0.001 s
-testNetwork.server*[*].netPerfMeterApp[*].startTime         = uniform(0.9s,1.1s)
-testNetwork.server*[*].netPerfMeterApp[*].resetTime         = 19 s
-testNetwork.server*[*].netPerfMeterApp[*].stopTime          = 60 s
-testNetwork.server*[*].netPerfMeterApp[*].queueSize         = 5000000 B
-testNetwork.server*[*].netPerfMeterApp[*].unordered         = 1
-testNetwork.server*[*].netPerfMeterApp[*].unreliable        = 0
-testNetwork.server*[*].netPerfMeterApp[*].maxInboundStreams = 16
-testNetwork.server*[*].netPerfMeterApp[*].frameRate         = 0 Hz
-testNetwork.server*[*].netPerfMeterApp[*].frameSize         = 0 B
-testNetwork.server*[*].netPerfMeterApp[*].frameRateString   = ""
-testNetwork.server*[*].netPerfMeterApp[*].frameSizeString   = ""
-testNetwork.server*[*].netPerfMeterApp[*].maxMsgSize        = 1452 B
+testNetwork.server*[*].app[*].activeMode        = false
+testNetwork.server*[*].app[*].connectTime       = 0.001 s
+testNetwork.server*[*].app[*].startTime         = uniform(0.9s,1.1s)
+testNetwork.server*[*].app[*].resetTime         = 19 s
+testNetwork.server*[*].app[*].stopTime          = 60 s
+testNetwork.server*[*].app[*].queueSize         = 5000000 B
+testNetwork.server*[*].app[*].unordered         = 1
+testNetwork.server*[*].app[*].unreliable        = 0
+testNetwork.server*[*].app[*].maxInboundStreams = 16
+testNetwork.server*[*].app[*].frameRate         = 0 Hz
+testNetwork.server*[*].app[*].frameSize         = 0 B
+testNetwork.server*[*].app[*].frameRateString   = ""
+testNetwork.server*[*].app[*].frameSizeString   = ""
+testNetwork.server*[*].app[*].maxMsgSize        = 1452 B
 testNetwork.server*[*].numPcapRecorders                     = 1   # *** Enable pcap dump here! ***
 testNetwork.server*[*].pcapRecorder[0].pcapFile             = ${N2=fullPath()}+".pcap"
 
 # ----- NetPerfMeter Connections -------------------------
-testNetwork.clientMain[*].numNetPerfMeterApps              = 1
-testNetwork.serverMain[*].numNetPerfMeterApps              = 1
-testNetwork.clientMain[*].netPerfMeterApp[*].localPort     = 20000+${alphaMainClientNetPerfMeterID=ancestorIndex(0)}
-testNetwork.clientMain[*].netPerfMeterApp[*].remotePort    = 8000+${alphaMainClientNetPerfMeterID}
-testNetwork.clientMain[*].netPerfMeterApp[*].remoteAddress = "testNetwork.serverMain[" + string(${alphaMainClientID=ancestorIndex(1)}) + "]%ppp0"
-testNetwork.clientMain[*].netPerfMeterApp[*].primaryPath   = "testNetwork.serverMain[" + string(${alphaMainClientID}) + "]%ppp0"
-testNetwork.serverMain[*].netPerfMeterApp[*].localPort     = 8000+${alphaMainServerNetPerfMeterID=ancestorIndex(0)}
+testNetwork.clientMain[*].numApps              = 1
+testNetwork.clientMain[*].app[*].typename = "NetPerfMeter"
+testNetwork.serverMain[*].numApps              = 1
+testNetwork.serverMain[*].app[*].typename = "NetPerfMeter"
+
+testNetwork.clientMain[*].app[*].localPort     = 20000+${alphaMainClientNetPerfMeterID=ancestorIndex(0)}
+testNetwork.clientMain[*].app[*].remotePort    = 8000+${alphaMainClientNetPerfMeterID}
+testNetwork.clientMain[*].app[*].remoteAddress = "testNetwork.serverMain[" + string(${alphaMainClientID=ancestorIndex(1)}) + "]%ppp0"
+testNetwork.clientMain[*].app[*].primaryPath   = "testNetwork.serverMain[" + string(${alphaMainClientID}) + "]%ppp0"
+testNetwork.serverMain[*].app[*].localPort     = 8000+${alphaMainServerNetPerfMeterID=ancestorIndex(0)}
 
 # ===== SCTP Parameters ==================================
 testNetwork.*.sctp.arwnd                 = 5000000
@@ -148,25 +151,25 @@ testNetwork.*.inputQueue.procDelay = 0.1us
 
 [Config TraceFile-Udp]
 testNetwork.systems = 1
-testNetwork.client*[*].netPerfMeterApp[*].traceFile = "trace111.trace"
-testNetwork.*[*].netPerfMeterApp[*].stopTime        = 600s
-testNetwork.*[*].netPerfMeterApp[*].protocol        = "UDP"
+testNetwork.client*[*].app[*].traceFile = "trace111.trace"
+testNetwork.*[*].app[*].stopTime        = 600s
+testNetwork.*[*].app[*].protocol        = "UDP"
 
 [Config TraceFile-Tcp]
 testNetwork.systems = 1
-testNetwork.client*[*].netPerfMeterApp[*].traceFile = "trace111.trace"
-testNetwork.*[*].netPerfMeterApp[*].stopTime        = 600s
-testNetwork.*[*].netPerfMeterApp[*].protocol        = "TCP"
+testNetwork.client*[*].app[*].traceFile = "trace111.trace"
+testNetwork.*[*].app[*].stopTime        = 600s
+testNetwork.*[*].app[*].protocol        = "TCP"
 
 [Config TraceFile-Sctp]
 testNetwork.systems = 1
-testNetwork.client*[*].netPerfMeterApp[*].traceFile = "trace111.trace"
-testNetwork.*[*].netPerfMeterApp[*].stopTime        = 600s
-testNetwork.*[*].netPerfMeterApp[*].protocol        = "SCTP"
+testNetwork.client*[*].app[*].traceFile = "trace111.trace"
+testNetwork.*[*].app[*].stopTime        = 600s
+testNetwork.*[*].app[*].protocol        = "SCTP"
 
 [Config SCTP-with-OLIA]
 testNetwork.systems = 1
-testNetwork.*[*].netPerfMeterApp[*].protocol = "SCTP"
+testNetwork.*[*].app[*].protocol = "SCTP"
 testNetwork.*.sctp.arwnd                       = 500000
 testNetwork.*.sctp.cmtSendAllVariant           = "smallestLastTransmission"
 testNetwork.*.sctp.cmtRetransmissionVariant    = "normal"
