PcapRecorder: the pcapNetwork parameter renamed to pcapLinkType

--- a/examples/sctp/cmttest/omnetpp.ini
+++ b/examples/sctp/cmttest/omnetpp.ini
@@ -86,8 +86,8 @@ network = multihomed
 **.sctp_client.numPcapRecorders = 1
 **.sctp_client.pcapRecorder[0].pcapFile = "results/client1.pcap"
 
-**.sctp_server.pcapRecorder[0].pcapNetwork = 204
-**.sctp_client.pcapRecorder[0].pcapNetwork = 204
+**.sctp_server.pcapRecorder[0].pcapLinkType = 204
+**.sctp_client.pcapRecorder[0].pcapLinkType = 204
 
 # tcp settings
 **.tcp.mss = 1024
