--- a/examples/wireless/nic/omnetpp.ini
+++ b/examples/wireless/nic/omnetpp.ini
@@ -7,6 +7,16 @@ network = TestNic
 
 *.numHosts = 2
 
+**.host[0].numPcapRecorders = 1
+**.host[0].pcapRecorder[*].pcapFile = "results/pcapfile.pcap"
+**.host[0].pcapRecorder[*].helpers = "inet::AckingMacToEthernetPcapRecorderHelper"
+**.host[0].pcapRecorder[*].sendingSignalnames = "sentDownPk"
+**.host[0].pcapRecorder[*].receivingSignalNames = "packetReceivedFromLower"
+**.host[0].pcapRecorder[*].dumpProtocols = "ackingmac"
+**.host[0].pcapRecorder[*].alwaysFlush = true
+**.crcMode="computed"
+**.fcsMode="computed"
+
 # mobility
 *.host[*].mobility.typename = "MassMobility"
 *.host[*].mobility.constraintAreaMinX = 0m
