OSPFv3: Moving hasIpv6 from StandardHost to specific examples
Note: StandardHost has to have hasIpv6=true otherwise crashes
(raises exception) when messageDispatcher handles unknown
protocol.

Is there a better way how to let MessageDispatcher discard uknown
protocol packets?

--- a/examples/ospfv3/small/omnetpp.ini
+++ b/examples/ospfv3/small/omnetpp.ini
@@ -3,6 +3,8 @@ network = small
 sim-time-limit = 200s
 fingerprint = ab67-5bf6/tplx
 
+**.Host*.hasIpv6 = true
+
 **.Router1.ospfv3.OSPFv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Routing6/OSPFv3")
 **.Router2.ospfv3.OSPFv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Routing6/OSPFv3")
 **.Router3.ospfv3.OSPFv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router3']/Routing6/OSPFv3")
