--- a/examples/ospfv3/multiple_areas_FINAL/omnetpp.ini
+++ b/examples/ospfv3/multiple_areas_FINAL/omnetpp.ini
@@ -3,6 +3,8 @@ sim-time-limit = 500s
 fingerprint = 067b-b41a/tplx
 network = multiple_areas2
 
+**.Host*.hasIpv6 = true
+
 **.Router1.ospfv3.OSPFv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R1']/Routing6/OSPFv3")
 **.Router2.ospfv3.OSPFv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R2']/Routing6/OSPFv3")
 **.Router3.ospfv3.OSPFv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R3']/Routing6/OSPFv3")
