--- a/examples/loadng/omnetpp.ini
+++ b/examples/loadng/omnetpp.ini
@@ -7,16 +7,35 @@ debug-on-errors = true
 **.wlan[*].mac.rng-0 = 2
 
 # channel physical parameters
-**.wlan[*].typename = "AckingWirelessInterface"
+#**.wlan[*].typename = "AckingWirelessInterface"
 **.wlan[*].bitrate = 2Mbps
 **.wlan[*].mac.headerLength = 20B
-**.wlan[*].radio.typename = "UnitDiskRadio"
+#**.wlan[*].radio.typename = "UnitDiskRadio"
 **.wlan[*].radio.transmitter.headerLength = 96b
 **.wlan[*].radio.transmitter.communicationRange = 250m
 **.wlan[*].radio.transmitter.interferenceRange = 0m
 **.wlan[*].radio.transmitter.detectionRange = 0m
 **.wlan[*].radio.receiver.ignoreInterference = true
+
+# nic settings
+**.wlan[*].bitrate = 2Mbps
+
+**.wlan[*].mgmt.frameCapacity = 10
+
+**.wlan[*].mac.retryLimit = 7
+**.wlan[*].mac.dcf.channelAccess.cwMin = 7
+**.wlan[*].mac.cwMinBroadcast = 31
+
+**.wlan[*].radio.transmitter.power = 2mW
+**.wlan[*].radio.receiver.sensitivity = -85dBm
+**.wlan[*].radio.receiver.snirThreshold = 4dB
+
+
 *.numHosts = 20
+
+
+**.useHelloMessages = true
+**.useIntelligentHello = false
 
 # mobility
 **.host[*].mobility.typename = "StationaryMobility"
@@ -46,46 +65,6 @@ description = routing without mobility
 *.host[*].wlan[*].radio.transmitter.communicationRange = 250m
 *.host[0].app[0].destAddr = "host[1](ipv4)"
 
-[Config IPv4SlowMobility]
-description = two fixed communicating nodes with low speed mobile nodes
-extends = Static
-# mobility
-**.aodv.activeRouteTimeout = 3s
-**.host[2..20].mobility.typename = "MassMobility"
-**.host[0].mobility.typename = "StationaryMobility"
-**.host[1].mobility.typename = "StationaryMobility"
-
-**.host[*].mobility.changeInterval = normal(5s, 0.1s)
-**.host[*].mobility.angleDelta = normal(0deg, 30deg)
-**.host[*].mobility.speed = normal(2mps, 0.01mps)
-**.host[1].mobility.initialX = 600m
-**.host[1].mobility.initialY = 600m
-
-[Config IPv4ModerateFastMobility]
-description = two fixed communicating nodes with moderate speed mobile nodes
-extends = IPv4SlowMobility
-# mobility
-**.aodv.activeRouteTimeout = 2s
-**.host[*].mobility.speed = normal(8mps, 0.01mps)
-
-[Config IPv4FastMobility]
-description = two fixed communicating nodes with high speed mobile nodes
-extends = IPv4SlowMobility
-# mobility
-**.aodv.activeRouteTimeout = 1s
-**.host[*].mobility.speed = normal(15mps, 0.01mps)
-
-[Config Dynamic]
-description = one node is shut down and restarted trigger route changes
-extends = Static
-*.host[*].hasStatus = true
-*.scenarioManager.script = xmldoc("dynamic.xml")
-
-[Config MoreDynamic]
-description = some nodes are shut down trigger route changes
-extends = Static
-*.host[*].hasStatus = true
-*.scenarioManager.script = xmldoc("moreDynamic.xml")
 
 [Config SimpleRREQ]
 description = demonstrates a single RREQ-RREP exchange
