Ospfv3: More renaming - submodule name to start with lower case
Ospfv3Splitter -> ospfv3Splitter for the submodule name.

--- a/examples/ospfv3/multiple_areas_FINAL/omnetpp.ini
+++ b/examples/ospfv3/multiple_areas_FINAL/omnetpp.ini
@@ -5,27 +5,27 @@ network = multiple_areas2
 
 **.Host*.hasIpv6 = true
 
-**.Router1.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R1']/Routing6/OSPFv3")
-**.Router2.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R2']/Routing6/OSPFv3")
-**.Router3.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R3']/Routing6/OSPFv3")
-**.Router4.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R4']/Routing6/OSPFv3")
-**.Router5.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R5']/Routing6/OSPFv3")
-**.Router6.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R6']/Routing6/OSPFv3")
-**.Router7.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R7']/Routing6/OSPFv3")
-**.Router8.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R8']/Routing6/OSPFv3")
-**.Router9.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R9']/Routing6/OSPFv3")
-**.Router10.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R10']/Routing6/OSPFv3")
+**.Router1.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R1']/Routing6/OSPFv3")
+**.Router2.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R2']/Routing6/OSPFv3")
+**.Router3.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R3']/Routing6/OSPFv3")
+**.Router4.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R4']/Routing6/OSPFv3")
+**.Router5.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R5']/Routing6/OSPFv3")
+**.Router6.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R6']/Routing6/OSPFv3")
+**.Router7.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R7']/Routing6/OSPFv3")
+**.Router8.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R8']/Routing6/OSPFv3")
+**.Router9.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R9']/Routing6/OSPFv3")
+**.Router10.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='R10']/Routing6/OSPFv3")
 
-**.Router1.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R1']/Interfaces")
-**.Router2.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R2']/Interfaces")
-**.Router3.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R3']/Interfaces")
-**.Router4.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R4']/Interfaces")
-**.Router5.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R5']/Interfaces")
-**.Router6.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R6']/Interfaces")
-**.Router7.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R7']/Interfaces")
-**.Router8.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R8']/Interfaces")
-**.Router9.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R9']/Interfaces")
-**.Router10.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R10']/Interfaces")
+**.Router1.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R1']/Interfaces")
+**.Router2.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R2']/Interfaces")
+**.Router3.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R3']/Interfaces")
+**.Router4.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R4']/Interfaces")
+**.Router5.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R5']/Interfaces")
+**.Router6.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R6']/Interfaces")
+**.Router7.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R7']/Interfaces")
+**.Router8.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R8']/Interfaces")
+**.Router9.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R9']/Interfaces")
+**.Router10.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='R10']/Interfaces")
 
 **.Router1.configData = xmldoc("config.xml", "Devices/Router[@id='R1']/")
 **.Router2.configData = xmldoc("config.xml", "Devices/Router[@id='R2']/")
