--- a/examples/ospfv3/small/omnetpp.ini
+++ b/examples/ospfv3/small/omnetpp.ini
@@ -5,15 +5,15 @@ fingerprint = ab67-5bf6/tplx
 
 **.Host*.hasIpv6 = true
 
-**.Router1.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Routing6/OSPFv3")
-**.Router2.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Routing6/OSPFv3")
-**.Router3.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router3']/Routing6/OSPFv3")
-**.Router4.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router4']/Routing6/OSPFv3")
+**.Router1.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Routing6/OSPFv3")
+**.Router2.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Routing6/OSPFv3")
+**.Router3.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router3']/Routing6/OSPFv3")
+**.Router4.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router4']/Routing6/OSPFv3")
 
-**.Router1.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Interfaces")
-**.Router2.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Interfaces")
-**.Router3.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router3']/Interfaces")
-**.Router4.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router4']/Interfaces")
+**.Router1.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Interfaces")
+**.Router2.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Interfaces")
+**.Router3.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router3']/Interfaces")
+**.Router4.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router4']/Interfaces")
 
 **.Router1.configData = xmldoc("config.xml", "Devices/Router[@id='Router1']/")
 **.Router2.configData = xmldoc("config.xml", "Devices/Router[@id='Router2']/")
