--- a/examples/ospfv3/v3_4_routers_2_areas/omnetpp.ini
+++ b/examples/ospfv3/v3_4_routers_2_areas/omnetpp.ini
@@ -4,17 +4,17 @@ fingerprint = 461f-fa8c/tplx
 network = v3_4_routers_2_areas
 
 
-**.Router1.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Routing6/OSPFv3")
-**.Router2.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Routing6/OSPFv3")
-**.Router3.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router3']/Routing6/OSPFv3")
-**.Router4.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router4']/Routing6/OSPFv3")
-**.Router5.ospfv3.Ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router5']/Routing6/OSPFv3")
+**.Router1.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Routing6/OSPFv3")
+**.Router2.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Routing6/OSPFv3")
+**.Router3.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router3']/Routing6/OSPFv3")
+**.Router4.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router4']/Routing6/OSPFv3")
+**.Router5.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router5']/Routing6/OSPFv3")
 
-**.Router1.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Interfaces")
-**.Router2.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Interfaces")
-**.Router3.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router3']/Interfaces")
-**.Router4.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router4']/Interfaces")
-**.Router5.ospfv3.Ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router5']/Interfaces")
+**.Router1.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Interfaces")
+**.Router2.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Interfaces")
+**.Router3.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router3']/Interfaces")
+**.Router4.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router4']/Interfaces")
+**.Router5.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router5']/Interfaces")
 
 **.Router1.configData = xmldoc("config.xml", "Devices/Router[@id='Router1']/")
 **.Router2.configData = xmldoc("config.xml", "Devices/Router[@id='Router2']/")
