Fix Etx behaviour

--- a/examples/loadng/omnetpp.ini
+++ b/examples/loadng/omnetpp.ini
@@ -36,6 +36,7 @@ debug-on-errors = true
 
 **.useHelloMessages = true
 **.useIntelligentHello = false
+**.measureEtx = true
 
 # mobility
 **.host[*].mobility.typename = "StationaryMobility"
