showcases: tests: edited some simulations to decrease running time

--- a/showcases/visualizer/styling/omnetpp.ini
+++ b/showcases/visualizer/styling/omnetpp.ini
@@ -42,15 +42,15 @@ network = StylingShowcase
 *.host1.numApps = 5
 *.host1.app[*].typename = "TcpSessionApp"
 *.host1.app[*].connectAddress = "host2"
-*.host1.app[*].sendBytes = 100MiB
+*.host1.app[*].sendBytes = 1MiB
 *.host1.app[0].connectPort = 10
 *.host1.app[1].connectPort = 20
 *.host1.app[2].connectPort = 30
 *.host1.app[3].connectPort = 40
 *.host1.app[4].connectPort = 50
-*.host1.app[*].tClose = 0s
 *.host1.app[*].tOpen = 0s
 *.host1.app[*].tSend = 0s
+*.host1.app[*].tClose = 0s
 
 *.host2.numApps = 5
 *.host2.app[*].typename = "TcpSinkApp"
@@ -84,10 +84,10 @@ network = AnnotationShowcase
 *.host1.app[6].connectPort = 70
 *.host1.app[7].connectPort = 80
 *.host1.app[8].connectPort = 90
-*.host1.app[*].sendBytes = 100MiB
-*.host1.app[*].tClose = 0s
+*.host1.app[*].sendBytes = 250KiB
 *.host1.app[*].tOpen = 0s
 *.host1.app[*].tSend = 0s
+*.host1.app[*].tClose = 0s
 
 *.host2.numApps = 9
 *.host2.app[*].typename = "TcpSinkApp"
