tutorials: headerLength was too small

--- a/tutorials/wireless/omnetpp.ini
+++ b/tutorials/wireless/omnetpp.ini
@@ -171,7 +171,7 @@ extends = Wireless11
 *.host*.wlan[0].radio.bandwidth = 2MHz
 *.host*.wlan[0].radio.transmitter.power = 1.4mW
 *.host*.wlan[0].radio.transmitter.preambleDuration = 10us
-*.host*.wlan[0].radio.transmitter.headerLength = 0b
+*.host*.wlan[0].radio.transmitter.headerLength = 8B
 *.host*.wlan[0].radio.receiver.sensitivity = -85dBm
 *.host*.wlan[0].radio.receiver.energyDetection = -85dBm
 *.host*.wlan[0].radio.receiver.snirThreshold = 4dB
