corrected typo in blockAckReqThreshold parameter

--- a/showcases/wireless/blockack/omnetpp.ini
+++ b/showcases/wireless/blockack/omnetpp.ini
@@ -53,7 +53,7 @@ description = "Packets are fragmented to 16 pieces, block ack after 16 packet tr
 **.hcf.originatorMacDataService.fragmentationPolicy.fragmentationThreshold = 100B
 *.host1.app[0].messageLength = 1080B
 
-*.host*.wlan[*].mac.hcf.originatorAckPolicy.blockAckReqTreshold = 16
+*.host*.wlan[*].mac.hcf.originatorAckPolicy.blockAckReqThreshold = 16
 
 [Config MixedTraffic]
 description = "Mixed traffic of packets shorter and longer than blockAckReqThreshold"
