tests: fingerprint: ethernet-twohosts: for run-number independent tests: using the repetition for set the seed-set - fingerprints changed

--- a/tests/fingerprint/ethernet-twohosts.ini
+++ b/tests/fingerprint/ethernet-twohosts.ini
@@ -2,7 +2,7 @@
 sim-time-limit = 1000s
 fingerprint = "0000"
 
-#seed-set = $repetition
+seed-set = ${repetition}
 
 network = inet.tests.ethernet.TwoHosts
 
