mac header lengths in the ini files adjusted to serializers

--- a/tutorials/wireless/omnetpp.ini
+++ b/tutorials/wireless/omnetpp.ini
@@ -23,6 +23,7 @@ sim-time-limit = 20s
 *.host*.wlan[0].mac.fullDuplex = false
 *.host*.wlan[0].radio.transmitter.communicationRange = 500m
 *.host*.wlan[0].radio.receiver.ignoreInterference = true
+*.host*.wlan[0].mac.headerLength = 23B
 
 *.host*.**.bitrate = 1Mbps
 
