--- a/showcases/wireless/sensornetwork/omnetpp.ini
+++ b/showcases/wireless/sensornetwork/omnetpp.ini
@@ -58,12 +58,14 @@
 network = SensorNetworkShowcaseA
 
 **.wlan[*].mac.typename = "BMac"
+**.wlan[*].mac.headerLength = 16B
 **.wlan[*].mac.slotDuration = 0.025s
 
 [Config XMac]
 network = SensorNetworkShowcaseA
 
 **.wlan[*].mac.typename = "XMac"
+**.wlan[*].mac.headerLength = 24B
 *.gateway.wlan[*].mac.slotDuration = 0.1s
 *.sensor*.wlan[*].mac.slotDuration = 0.25s
 
@@ -85,12 +87,14 @@ repeat = 10
 extends = StatisticBase
 
 **.wlan[*].mac.typename = "BMac"
+**.wlan[*].mac.headerLength = 16B
 **.wlan[*].mac.slotDuration = ${slotDuration=0.01..1 step 0.01}s
 
 [Config StatisticXMac]
 extends = StatisticBase
 
 **.wlan[*].mac.typename = "XMac"
+**.wlan[*].mac.headerLength = 24B
 *.gateway.wlan[*].mac.slotDuration = ${gwSlotDuration=0.01..1 step 0.01}s
 *.sensor*.wlan[*].mac.slotDuration = ${snSlotDuration=2.5*$gwSlotDuration}s
 
