showcases: coexistence: fixed packet drop visualizer format

--- a/showcases/wireless/coexistence/omnetpp.ini
+++ b/showcases/wireless/coexistence/omnetpp.ini
@@ -71,7 +71,7 @@ repeat = 8
 *.visualizer.routingTableVisualizer.displayRoutingTables = false
 
 *.visualizer.packetDropVisualizer.displayPacketDrops = true
-*.visualizer.packetDropVisualizer.labelFormat = "%t"
+*.visualizer.packetDropVisualizer.labelFormat = "%r"
 
 # arp type
 *.*Host*.ipv4.arp.typename = "GlobalArp"
