examples: RedMarker: follow the queueing api changes
queue module moved into mac module
RedDropper parameters renamed,
RedDropper has simple parameters, not vectors

--- a/examples/inet/redmarker/omnetpp.ini
+++ b/examples/inet/redmarker/omnetpp.ini
@@ -3,16 +3,16 @@ network = inet.examples.inet.redmarker.RedMarkerNetwork
 
 
 # Queue setting
-**.routerCore*.eth[*].queue.typename       = "RedMarkerQueue"
-**.routerCore*.eth[*].queue.red.wq         = 1 #0.002 #0.8
-**.routerCore*.eth[*].queue.red.minths     = "3" #"5"
-**.routerCore*.eth[*].queue.red.maxths     = "4"  
-**.routerCore*.eth[*].queue.red.maxps      = "1"
-**.routerCore*.eth[0].queue.red.pkrates    = "8333.3333"
-**.routerCore*.eth[1].queue.red.pkrates    = "833.3333"
-**.routerCore*.eth[*].queue.red.marks 	   = "1"
-**.routerCore*.eth[*].queue.red.recStart   = 0
-**.routerCore*.eth[*].queue.red.frameQueueCapacity = 24 # 
+**.routerCore*.eth[*].mac.queue.typename       = "RedMarkerQueue"
+**.routerCore*.eth[*].mac.queue.red.wq         = 1 #0.002 #0.8
+**.routerCore*.eth[*].mac.queue.red.minth      = 3 #"5"
+**.routerCore*.eth[*].mac.queue.red.maxth      = 4
+**.routerCore*.eth[*].mac.queue.red.maxp       = 1
+**.routerCore*.eth[0].mac.queue.red.pkrate     = 8333.3333
+**.routerCore*.eth[1].mac.queue.red.pkrate     = 833.3333
+**.routerCore*.eth[*].mac.queue.red.mark       = 1
+**.routerCore*.eth[*].mac.queue.red.recStart   = 0
+**.routerCore*.eth[*].mac.queue.red.frameQueueCapacity = 24 #
 
 
 [Config TcpSender1]
@@ -49,8 +49,4 @@ network = inet.examples.inet.redmarker.RedMarkerNetwork
 
 **.receiver1.app[0].typename = "TcpSinkApp"
 **.receiver1.app[0].localPort = 1000
-
-
-
-
 
