All: Followed recent rename of carrierFrequency.

--- a/examples/wireless/nic/omnetpp.ini
+++ b/examples/wireless/nic/omnetpp.ini
@@ -83,7 +83,7 @@ network = TestNic
 *.radioMedium.typename = "ApskScalarRadioMedium"
 *.radioMedium.backgroundNoise.power = -110dBm
 *.host[*].wlan[*].radio.typename = "ApskScalarRadio"
-*.host[*].wlan[*].radio.carrierFrequency = 2.412GHz
+*.host[*].wlan[*].radio.centerFrequency = 2.412GHz
 *.host[*].wlan[*].radio.bandwidth = 2MHz
 *.host[*].wlan[*].radio.transmitter.power = 2mW
 *.host[*].wlan[*].radio.transmitter.bitrate = 2Mbps
@@ -98,7 +98,7 @@ network = TestNic
 *.radioMedium.typename = "ApskDimensionalRadioMedium"
 *.radioMedium.backgroundNoise.power = -110dBm
 *.host[*].wlan[*].radio.typename = "ApskDimensionalRadio"
-*.host[*].wlan[*].radio.carrierFrequency = 2.412GHz
+*.host[*].wlan[*].radio.centerFrequency = 2.412GHz
 *.host[*].wlan[*].radio.bandwidth = 2MHz
 *.host[*].wlan[*].radio.transmitter.power = 2mW
 *.host[*].wlan[*].radio.transmitter.bitrate = 2Mbps
@@ -242,6 +242,6 @@ description = "IEEE 802.11 radios for V2X communication in 5.9 GHz band"
 **.wlan*.mac.*.rateSelection.*Bitrate = 6 Mbps
 **.wlan*.radio.bandName = "5.9 GHz"
 **.wlan*.radio.bandwidth = 10 MHz
-**.wlan*.radio.carrierFrequency = 5.9 GHz
+**.wlan*.radio.centerFrequency = 5.9 GHz
 **.wlan*.radio.channelNumber = 4
 
