--- a/showcases/wireless/sensornetwork/omnetpp.ini
+++ b/showcases/wireless/sensornetwork/omnetpp.ini
@@ -12,7 +12,7 @@
 *.configurator.config = xmldoc("config.xml")
 
 # radio and radioMedium
-**.radio.carrierFrequency = 2.45GHz
+**.radio.centerFrequency = 2.45GHz
 **.radio.bandwidth = 2.8MHz
 
 **.radio.transmitter.bitrate = 19200 bps
