--- a/tutorials/wireless/omnetpp.ini
+++ b/tutorials/wireless/omnetpp.ini
@@ -164,10 +164,10 @@ extends = Wireless11
 
 *.radioMedium.typename = "ApskScalarRadioMedium"
 *.radioMedium.backgroundNoise.power = -90dBm
-*.radioMedium.mediumLimitCache.carrierFrequency = 2GHz
+*.radioMedium.mediumLimitCache.centerFrequency = 2GHz
 
 *.host*.wlan[0].radio.typename = "ApskScalarRadio"
-*.host*.wlan[0].radio.carrierFrequency = 2GHz
+*.host*.wlan[0].radio.centerFrequency = 2GHz
 *.host*.wlan[0].radio.bandwidth = 2MHz
 *.host*.wlan[0].radio.transmitter.power = 1.4mW
 *.host*.wlan[0].radio.transmitter.preambleDuration = 10us
