--- a/examples/wireless/corruptionmode/omnetpp.ini
+++ b/examples/wireless/corruptionmode/omnetpp.ini
@@ -36,7 +36,7 @@ sim-time-limit = 10s
 *.*Host.wlan[0].mac.bitrate = 100Mbps
 *.*Host.wlan[0].mac.retryLimit = 0
 *.*Host.wlan[0].radio.typename = "ApskScalarRadio"
-*.*Host.wlan[0].radio.carrierFrequency = 2GHz
+*.*Host.wlan[0].radio.centerFrequency = 2GHz
 *.*Host.wlan[0].radio.bandwidth = 20MHz
 *.*Host.wlan[0].radio.transmitter.power = 1mW
 *.*Host.wlan[0].radio.transmitter.bitrate = 100Mbps
