--- a/showcases/wireless/coexistence/omnetpp.ini
+++ b/showcases/wireless/coexistence/omnetpp.ini
@@ -6,7 +6,7 @@ repeat = 8
 # radio medium settings
 *.radioMedium.analogModel.typename = "DimensionalAnalogModel"
 *.radioMedium.backgroundNoise.typename = "IsotropicDimensionalBackgroundNoise"
-*.radioMedium.backgroundNoise.power = -110dBm
+*.radioMedium.backgroundNoise.powerSpectralDensity = -113dBmWpMHz
 
 # radio settings
 # 2452MHz/20MHz bw
