Change carrierFrequency to centerFrequency

--- a/examples/manetrouting/aodv_uu/omnetppTest.ini
+++ b/examples/manetrouting/aodv_uu/omnetppTest.ini
@@ -19,7 +19,7 @@ debug-on-errors = true
 
 **.wlan[*].radio.transmitter.power = 100mW
 **.wlan[*].radio.transmitter.headerBitLength = 100b
-**.carrierFrequency = 5GHz
+**.centerFrequency = 5GHz
 **.wlan[*].radio.receiver.sensitivity = -85dBm
 **.wlan[*].radio.receiver.snirThreshold = 4dB
 
