--- a/examples/manetrouting/net80211_aodv/omnetpp.ini
+++ b/examples/manetrouting/net80211_aodv/omnetpp.ini
@@ -55,12 +55,9 @@ description = "Manet routing Simple test"
 **.llfeedback = true
 # nic settings
 **.wlan*.bitrate = 54Mbps
-
-**.wlan[*].mgmt.frameCapacity = 10
-**.wlan[*].mac.retryLimit = 7
+**.wlan[*].mac.dcf.channelAccess.pendingQueue.frameCapacity = 10
 **.wlan[*].mac.dcf.channelAccess.cwMin = 7
-**.wlan[*].mac.cwMinMulticast = 31
-
+**.wlan[*].mac.dcf.recoveryProcedure.shortRetryLimit = 7
 **.wlan[*].radio.transmitter.power = 2mW
 
 
