--- a/examples/ospfv3/v3_2_routers/omnetpp.ini
+++ b/examples/ospfv3/v3_2_routers/omnetpp.ini
@@ -5,11 +5,11 @@ network = v3_2_routers
 
 
 
-**.Router1.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Routing6/OSPFv3")
-**.Router2.ospfv3.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Routing6/OSPFv3")
+**.Router1.ospf.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Routing6/OSPFv3")
+**.Router2.ospf.ospfv3Splitter.ospfv3RoutingConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Routing6/OSPFv3")
 
-**.Router1.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Interfaces")
-**.Router2.ospfv3.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Interfaces")
+**.Router1.ospf.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router1']/Interfaces")
+**.Router2.ospf.ospfv3Splitter.ospfv3IntConfig = xmldoc("config.xml", "Devices/Router[@id='Router2']/Interfaces")
 
 **.Router1.configData = xmldoc("config.xml", "Devices/Router[@id='Router1']/")
 **.Router2.configData = xmldoc("config.xml", "Devices/Router[@id='Router2']/")
